# helloFlask

./: Dockerfile  README.md  pyproject.toml
helloFlask/: script.py  vgg16_func.py
helloFlask/templates/: AI.html  _navigation.html  cat.html  index.html  more_cats.html  test_upload.html  uploader.html
helloflask/: script.py
helloflask/templates/: cat.html  create.html  more_cats.html  test_upload.html
