[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.6,<3.11"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"
WTForms = "^3.0.1"
Werkzeug = "^2.2.2"
Flask-WTF = "^1.0.1"
tensorflow = "^2.9.1"
keras = "^2.9.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
